--- a/css/students.css
+++ b/css/students.css
@@ -3,8 +3,9 @@ main {
     grid-template-areas: 
         "header"
         "button"
-        "table";
-    grid-template-rows: 80px 80px 1fr;
+        "table"
+        "pages";
+    grid-template-rows: 70px 70px 370px 1fr;
     grid-template-columns: 1fr;
     background-color:rgb(222, 237, 251);
 }
@@ -13,6 +14,7 @@ main h1 {
     grid-area: header;
     margin-left: 20px;
     color: black;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .addStudent {
@@ -55,50 +57,77 @@ main h1 {
     width: 500px;
     height: 400px;
     background-color: rgb(255, 255, 255);
-    border: 1px solid #202020;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 3%;
     contain: content;
 }
 
-.ModalWindow header,
-.ModalWindow footer {
-    width: 100%;
-    height: 40px;
-    background-color: rgb(198, 197, 197);
+.ModalWindow header {
+    height: 50px;
+    background-color: rgb(222, 237, 251);
     display: flex; 
     justify-content: center; 
     align-items: center; 
 }
 .ModalWindow footer {
-    background-color: rgb(78, 76, 76);
+    border-top: 2px solid rgb(116, 116, 116, 0.5);
+    background-color: #f9f9f9;
+    height: 65px;
+    display: flex;
+    padding: 0 25px;
 }
 
 .ModalWindow .body {
-    width: 100%;
-    height: calc(100% - 80px);
-    max-height: 320px;
     display: grid;
-    grid-template-columns: 25% 75%;
-    grid-template-rows: 15% 15% 15% 15% 15%;
+    grid-template-columns: 150px 350px; 
+    gap: 10px 15px;
+    padding: 15px;
+    background-color: white;
+    border-radius: 8px;
+    height: 285px;
+    max-height: 285px;
+    width: 100%;
+    box-sizing: border-box;
+    align-items: center;
 }
 
 .ModalWindow .body label {
     font-weight: bold;
-    margin: 5px;
+    text-align: left; 
+    margin-left:50px;
+    font-size: 16px;
 }
 
-.ModalWindow .body input, 
+.ModalWindow .body input,
 .ModalWindow .body select {
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin: 5px;
+    padding: 6px;
+    font-size: 14px;
+    width: 250px;
+    max-width: 250px;
+    background-color: white;
+    transition: border-color 0.3s ease-in-out;
 }
+
+.ModalWindow .body input:focus,
+.ModalWindow .body select:focus {
+    border-color: #10447b;
+    outline: none;
+    box-shadow: 0 0 3px rgba(0, 123, 255, 0.3);
+}
+
 
 main .table {
     grid-area: table;
     overflow: auto;
     margin-left: 20px;
     margin-right: 20px;
-    max-height: 400px;
+    max-height: 366px;
+}
+
+main .table tr {
+    height: 45px;
 }
 
 main .table table{
@@ -109,7 +138,8 @@ main .table table{
 
 main .table th, td {
     border: 2px solid black;
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     text-align: center;
     background-color: white;
 }
@@ -117,7 +147,7 @@ main .table th, td {
 main .table th {
     font-weight: bold;
     border: 2px solid black;
-    background-color:bisque;
+    background-color:rgb(220, 220, 220);
 }
 
 main .table .checkboxColumn input{
@@ -180,8 +210,8 @@ main .table .checkboxColumn input{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); 
-    width: 350px;
-    height: 200px;
+    width: 370px;
+    height: 235px;
     background-color: rgb(255, 255, 255);
     contain: content;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
@@ -190,24 +220,25 @@ main .table .checkboxColumn input{
 
 .modalWindowDelete header {
     background-color: rgb(222, 237, 251);
-    color:rgb(32, 77, 135);
-    height:45px;
-    font-weight:600;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    height:50px;
 }
 
-.modalWindowDelete header p {
+header .modalH {
     margin:15px;
+    color:rgb(32, 77, 135);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight:600;
+    font-size:16px;
 }
 
-.modalWindowDelete header button {
+header .buttonX {
     font-weight:600;
     font-size: 23px;
     align-items: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     cursor: pointer;
     width: 50px;
-    height: 45px;
+    height: 50px;
     background: transparent;
     border: none;
     position: absolute;
@@ -217,12 +248,12 @@ main .table .checkboxColumn input{
     text-align: center;
 }
 
-.modalWindowDelete header button:hover {
+header .buttonX:hover {
     background: rgb(189, 217, 243);
 }
 
 .modalWindowDelete div {
-    height:75px;
+    height:95px;
     margin:15px;
     display: flex;
     align-items: center; 
@@ -244,49 +275,51 @@ main .table .checkboxColumn input{
 
 .modalWindowDelete footer {
     border-top: 2px solid rgb(116, 116, 116, 0.5);
-    height: 80px;
+    background-color: #f9f9f9;
+    height: 65px;
     display: flex;
-    padding: 0 25px; /* Відступи з боків */
+    padding: 0 25px;
 }
 
-.modalWindowDelete footer button{
+footer .disable,
+footer .active {
     border: 2px solid rgb(0, 0, 0, 0.6);
     border-radius: 6px;
     background-color: transparent;
     height:35px;
     width:80px;
-    margin-top:8px;
+    margin-top: 12px;
     cursor: pointer;
     text-align: center;
     transition: 0.3s ease-in;
 }
 
-.modalWindowDelete footer .deleteCancel {
-    margin-right: auto; /* Відсуває кнопку "Cancel" вліво */
+footer .disable {
+    margin-right: auto;
 }
 
-.modalWindowDelete footer .deleteOk {
+footer .active {
     margin-left: auto; 
     background-color: rgb(32, 77, 135);
     color:white;
     transition: 0.3s ease-in;
 }
 
-.modalWindowDelete footer .deleteOk:hover {
+footer .active:hover {
     background-color: rgb(58, 104, 165);
 }
 
-.modalWindowDelete footer .deleteOk:active {
+footer .active:active {
     background-color: rgb(18, 43, 75);
     transform: scale(0.9);
 }
 
-.modalWindowDelete footer .deleteCancel:hover {
-    background-color: rgb(210, 209, 209);
+footer .disable:hover {
+    background-color: rgb(233, 233, 233);
 }
 
-.modalWindowDelete footer .deleteCancel:active {
-    background-color: rgb(155, 155, 155);
+footer .disable:active {
+    background-color: rgb(189, 189, 189);
     transform: scale(0.9);
 }
 
@@ -300,4 +333,67 @@ main .table .checkboxColumn input{
     border: 2px solid rgb(210, 210, 210);
     align-self: center;
     justify-self: center;
+}
+
+main .pages {
+    grid-area: pages;
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+main .pages button {
+    border: 2px solid #ccc;
+    background-color: rgb(32, 77, 135);
+    color:white;
+    padding: 8px 12px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: 0.2s;
+}
+
+main .pages button:hover {
+    background-color: rgb(58, 104, 165);
+}
+
+main .pages button:Active {
+    background-color: rgb(18, 43, 75);
+}
+
+main .pages .arrow {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+
+.button-group button {
+    padding:0px;
+    margin:0px;
+    background: transparent;
+    border: none;
+    border-radius: 50%;
+    transition: 0.3s ease;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 35px; 
+    height: 35px;
+}
+
+.button-group button img {
+    width: 25px; 
+    height: 25px;
+}
+
+.button-group button:hover {
+    background-color: rgba(0, 0, 0, 0.1); 
+}
+
+.button-group button:active {
+    background-color: rgba(0, 0, 0, 0.3);
+    transform:scale(0.9);
 }
