--- a/css/students.css
+++ b/css/students.css
@@ -397,6 +397,18 @@ main .pages .arrow {
     transform:scale(0.9);
 }
 
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+    white-space: nowrap;
+}
+
 /* Для смартфонів */
 @media screen and (max-width: 768px) {
     .ModalWindow {
