--- a/css/students.css
+++ b/css/students.css
@@ -249,6 +249,7 @@ main .table .checkboxColumn input{
     contain: content;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 3%;
+    z-index: 20;
 }
 
 .modalWindowDelete header {
@@ -271,7 +272,7 @@ header .buttonX {
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     cursor: pointer;
     width: 50px;
-    height: 45px;
+    height: 50px;
     background: transparent;
     border: none;
     position: absolute;
